<resources>
    <string name="app_name">MineSweeper</string>

    <string name="score_title">Highest Score</string>
    <string name="diff_title">Difficulty:</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_medium">Medium</string>
    <string name="diff_hard">Hard</string>

    <string name="easyTag">EASY</string>
    <string name="mediumTag">MEDIUM</string>
    <string name="hardTag">HARD</string>

    <string name="btn_start">Start Game</string>
    <string name="btn_new">Start New Game</string>
    <string name="game_over">GAME OVER</string>
    <string name="game_win">You Won!</string>
    <string name="game_lose">You Lost</string>
    <string name="game_time">Time:</string>
    <string name="result_time">Result Time:</string>
    <string name="time">00:00</string>

    <string name="diff_tag">diffTag</string>
    <string name="status_tag">statusTag</string>
    <string name="time_tag">timeTag</string>

    <string name="score_filename">highscores</string>
    <string name="easy_score_tag">easyHS</string>
    <string name="med_score_tag">medHS</string>
    <string name="hard_score_tag">hardHS</string>

    <string name="Scores_Json_File">Scores_Json_File.json</string>
    <string name="Scores_Json_String">Scores_Json_String</string>

    <string name="btn_back">Back</string>
    <string name="highest_scores_title">Highest Scores</string>
    <string name="place_title">place</string>

</resources>